--- a/INDEX.html
+++ b/INDEX.html
@@ -66,6 +66,9 @@
 
     
 
+ <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/08/15/12/20250815120718-FGPS50IA.js" defer></script>
+    
 
 
 
