--- a/INDEX.html
+++ b/INDEX.html
@@ -65,7 +65,7 @@
     </footer>
 
     
-
+</body>
  <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/08/15/12/20250815120718-FGPS50IA.js" defer></script>
     
@@ -84,3 +84,4 @@
 
 
     </html>
+
